--- a/mind-how-to-build-a-neural-network/index.html
+++ b/mind-how-to-build-a-neural-network/index.html
@@ -45,7 +45,7 @@
   <div class="Article-content Prose Prose--medium">
     <p><a href="https://en.wikipedia.org/wiki/Artificial_neural_network">Artificial neural networks</a> are statistical learning models, inspired by biological neural networks (central nervous systems, such as the brain), that are used in <a href="https://en.wikipedia.org/wiki/List_of_machine_learning_concepts">machine learning</a>. These networks are represented as systems of interconnected “neurons”, which send messages to each other. The connections within the network can be systematically adjusted based on inputs and outputs, making them ideal for supervised learning.</p>
 <p>Neural networks can be intimidating, especially for people with little experience in machine learning and cognitive science! However, through code, this tutorial will explain how neural networks operate. By the end, you will know how to build your own flexible, learning network, similar to <a href="https://www.github.com/stevenmiller888/mind">Mind</a>.</p>
-<p>The only prerequisite is having a basic understanding of JavaScript. Other than that, you don’t need to know anything. Have fun!</p>
+<p>The only prerequisites are having a basic understanding of JavaScript, high-school Calculus, and simple matrix operations. Other than that, you don’t need to know anything. Have fun!</p>
 <h2 id="understanding-the-mind">Understanding the Mind</h2>
 <p>A neural network is a collection of “neurons” with “synapses” connecting them. The collection is organized into three main parts: the input layer, the hidden layer, and the output layer. Note that you can have <em>n</em> hidden layers, with the term “deep” learning implying multiple hidden layers.</p>
 <p><img src="https://cldup.com/ytEwlOfrRZ-2000x2000.png" alt=""></p>
