--- a/mind-how-to-build-a-neural-network/index.html
+++ b/mind-how-to-build-a-neural-network/index.html
@@ -71,16 +71,16 @@
 1, 0  | 1
 1, 1  | 0
 </code></pre><p>Let’s use the last row from the above table, <code>(1, 1) =&gt; 0</code>, to demonstrate forward propagation:</p>
-<p><img src="http://i.imgur.com/l2ljT1F.png" alt=""></p>
+<p><img src="http://imgur.com/aTFz1Az.png" alt=""></p>
 <p><em>Note that we use a single hidden layer with only three neurons for this example.</em></p>
 <p>We now assign weights to all of the synapses. Note that these weights are selected randomly (based on Gaussian distribution) since it is the first time we’re forward propagating. The initial weights will be between 0 and 1, but note that the final weights don’t need to be.</p>
-<p><img src="http://i.imgur.com/RRn0pgb.png" alt=""></p>
+<p><img src="http://imgur.com/Su6Y4UC.png" alt=""></p>
 <p>We sum the product of the inputs with their corresponding set of weights to arrive at the first values for the hidden layer. You can think of the weights as measures of influence the input nodes have on the output.</p>
 <pre><code>1 * 0.8 + 1 * 0.2 = 1
 1 * 0.4 + 1 * 0.9 = 1.3
 1 * 0.3 + 1 * 0.5 = 0.8
 </code></pre><p>We put these sums smaller in the circle, because they’re not the final value:</p>
-<p><img src="http://i.imgur.com/tVBcyZz.png" alt=""></p>
+<p><img src="http://imgur.com/gTvxRwo.png" alt=""></p>
 <p>To get the final value, we apply the <a href="https://en.wikipedia.org/wiki/Activation_function">activation function</a> to the hidden layer sums. The purpose of the activation function is to transform the input signal into an output signal and are necessary for neural networks to model complex non-linear patterns that simpler models might miss.</p>
 <p>There are many types of activation functions—linear, sigmoid, hyperbolic tangent, even step-wise. To be honest, I don’t know why one function is better than another.</p>
 <p><img src="https://cldup.com/hxmGABAI7Y.png" alt=""></p>
@@ -92,26 +92,26 @@
 S(1.3) = 0.78583498304
 S(0.8) = 0.68997448112
 </code></pre><p>We add that to our neural network as hidden layer <em>results</em>:</p>
-<p><img src="http://i.imgur.com/GjQuLls.png" alt=""></p>
+<p><img src="http://imgur.com/yE88Ryt.png" alt=""></p>
 <p>Then, we sum the product of the hidden layer results with the second set of weights (also determined at random the first time around) to determine the output sum.</p>
-<pre><code>0.27 * 0.3 + 0.79 * 0.5 + 0.31 * 0.9 = 0.755
+<pre><code>0.73 * 0.3 + 0.79 * 0.5 + 0.69 * 0.9 = 1.235
 </code></pre><p>..finally we apply the activation function to get the final output result.</p>
-<pre><code>S(0.755) = 0.6802671966986485
+<pre><code>S(1.235) = 0.7746924929149283
 </code></pre><p>This is our full diagram:</p>
-<p><img src="http://i.imgur.com/GIWpAJ6.png" alt=""></p>
-<p>Because we used a random set of initial weights, the value of the output neuron is off the mark; in this case by +0.68 (since the target is 0). If we stopped here, this set of weights would be a great neural network for inaccurately representing the XOR operation.</p>
+<p><img src="http://imgur.com/IDFRq5a.png" alt=""></p>
+<p>Because we used a random set of initial weights, the value of the output neuron is off the mark; in this case by +0.77 (since the target is 0). If we stopped here, this set of weights would be a great neural network for inaccurately representing the XOR operation.</p>
 <p>Let’s fix that by using back propagation to adjust the weights to improve the network!</p>
 <h3 id="back-propagation">Back Propagation</h3>
 <p>To improve our model, we first have to quantify just how wrong our predictions are. Then, we adjust the weights accordingly so that the margin of errors are decreased.</p>
 <p>Similar to forward propagation, back propagation calculations occur at each “layer”. We begin by changing the weights between the hidden layer and the output layer.</p>
-<p><img src="http://i.imgur.com/pYhOMXJ.png" alt=""></p>
+<p><img src="http://imgur.com/kEyDCJ8.png" alt=""></p>
 <p>Calculating the incremental change to these weights happens in two steps: 1) we find the margin of error of the output result (what we get after applying the activation function) to back out the necessary change in the output sum (we call this <code>delta output sum</code>) and 2) we extract the change in weights by multiplying <code>delta output sum</code> by the hidden layer results.</p>
 <p>The <code>output sum margin of error</code> is the target output result minus the calculated output result:</p>
 <p><img src="http://i.imgur.com/IAddjWL.png" alt=""></p>
 <p>And doing the math:</p>
 <pre><code>Target = 0
-Calculated = 0.68
-Target - calculated = -0.68
+Calculated = 0.77
+Target - calculated = -0.77
 </code></pre><p>To calculate the necessary change in the output sum, or <code>delta output sum</code>, we take the derivative of the activation function and apply it to the output sum. In our example, the activation function is the sigmoid function.</p>
 <p>To refresh your memory, the activation function, sigmoid, takes the sum and returns the result:</p>
 <p><img src="http://i.imgur.com/rKHEE51.png" alt=""></p>
@@ -121,11 +121,11 @@ Target - calculated = -0.68
 <p><img src="http://i.imgur.com/4qnVb6S.png" alt=""></p>
 <p>Conceptually, this means that the change in the output sum is the same as the sigmoid prime of the output result. Doing the actual math, we get:</p>
 <pre><code>Delta output sum = S&#39;(sum) * (output sum margin of error)
-Delta output sum = S&#39;(0.755) * (-0.68)
-Delta output sum = -0.1479
+Delta output sum = S&#39;(1.235) * (-0.77)
+Delta output sum = -0.13439890643886018
 </code></pre><p>Here is a graph of the Sigmoid function to give you an idea of how we are using the derivative to move the input towards the right direction. Note that this graph is not to scale.</p>
 <p><img src="http://i.imgur.com/ByyQIJ8.png" alt=""></p>
-<p>Now that we have the proposed change in the output layer sum (-0.14), let’s use this in the derivative of the output sum function to determine the new change in weights.</p>
+<p>Now that we have the proposed change in the output layer sum (-0.13), let’s use this in the derivative of the output sum function to determine the new change in weights.</p>
 <p>As a reminder, the mathematical definition of the <code>output sum</code> is the product of the hidden layer result and the weights between the hidden and output layer:</p>
 <p><img src="http://i.imgur.com/ITudruR.png" alt=""></p>
 <p>The derivative of the <code>output sum</code> is:</p>
@@ -134,21 +134,21 @@ Delta output sum = -0.1479
 <p><img src="http://i.imgur.com/TR7FS2S.png" alt=""></p>
 <p>This relationship suggests that a greater change in output sum yields a greater change in the weights; input neurons with the biggest contribution (higher weight to output neuron) should experience more change in the connecting synapse.</p>
 <p>Let’s do the math:</p>
-<pre><code>hidden result 1 = 0.2689
-hidden result 2 = 0.7858
-hidden result 3 = 0.3100
+<pre><code>hidden result 1 = 0.73105857863
+hidden result 2 = 0.78583498304
+hidden result 3 = 0.68997448112
 
 Delta weights = delta output sum / hidden layer results
-Delta weights = -0.1479 / [0.2689, 0.7858, 0.3100]
-Delta weights = [-0.5500, -0.1882, -0.4771]
+Delta weights = -0.1344 / [0.73105, 0.78583, 0.69997]
+Delta weights = [-0.1838, -0.1710, -0.1920]
 
 old w7 = 0.3
 old w8 = 0.5
 old w9 = 0.9
 
-new w7 = -0.25
-new w8 = 0.3118
-new w9 = 0.4229
+new w7 = -0.1162
+new w8 = 0.329
+new w9 = 0.708
 </code></pre><p>To determine the change in the weights between the <em>input and hidden</em> layers, we perform the similar, but notably different, set of calculations. Note that in the following calculations, we use the initial weights instead of the recently adjusted weights from the first part of the backward propagation.</p>
 <p>Remember that the relationship between the hidden result, the weights between the hidden and output layer, and the output sum is:</p>
 <p><img src="http://i.imgur.com/ITudruR.png" alt=""></p>
@@ -162,9 +162,9 @@ new w9 = 0.4229
 <img src="http://i.imgur.com/msHbhQl.png" alt=""></p>
 <p>All of the pieces in the above equation can be calculated, so we can determine the <code>delta hidden sum</code>:</p>
 <pre><code>Delta hidden sum = delta output sum / hidden-to-outer weights * S&#39;(hidden sum)
-Delta hidden sum = -0.1479 / [0.3, 0.5, 0.9] * S&#39;([1, 1.3, 0.8])
-Delta hidden sum = [-0.4930, -0.2958, -0.1643] * [0.1966, 0.1683, 0.2139]
-Delta hidden sum = [-0.0969, -0.0498, -0.0351]
+Delta hidden sum = -0.1344 / [0.3, 0.5, 0.9] * S&#39;([1, 1.3, 0.8])
+Delta hidden sum = [-0.448, -0.2688, -0.1493] * [0.1966, 0.1683, 0.2139]
+Delta hidden sum = [-0.088, -0.0452, -0.0319]
 </code></pre><p>Once we get the <code>delta hidden sum</code>, we calculate the change in weights between the input and hidden layer by dividing it with the input data, <code>(1, 1)</code>. The input data here is equivalent to the <code>hidden results</code> in the earlier back propagation process to determine the change in the hidden-to-output weights. Here is the derivation of that relationship, similar to the one before:</p>
 <p><img src="http://i.imgur.com/7NmXWSh.png" alt="">
 <img src="http://i.imgur.com/1SDxECJ.png" alt="">
@@ -174,8 +174,8 @@ Delta hidden sum = [-0.0969, -0.0498, -0.0351]
 input 2 = 1
 
 Delta weights = delta hidden sum / input data
-Delta weights = [-0.0969, -0.0498, -0.0351] / [1, 1]
-Delta weights = [-0.0969, -0.0498, -0.0351, -0.0969, -0.0498, -0.0351]
+Delta weights = [-0.088, -0.0452, -0.0319] / [1, 1]
+Delta weights = [-0.088, -0.0452, -0.0319, -0.088, -0.0452, -0.0319]
 
 old w1 = 0.8
 old w2 = 0.4
@@ -184,27 +184,27 @@ old w4 = 0.2
 old w5 = 0.9
 old w6 = 0.5
 
-new w1 = 0.7031
-new w2 = 0.3502
-new w3 = 0.2649
-new w4 = 0.1031
-new w5 = 0.8502
-new w6 = 0.4649
+new w1 = 0.712
+new w2 = 0.3548
+new w3 = 0.2681
+new w4 = 0.112
+new w5 = 0.8548
+new w6 = 0.4681
 </code></pre><p>Here are the new weights, right next to the initial random starting weights as comparison:</p>
 <pre><code>old         new
 -----------------
-w1: 0.8     w1: 0.7031
-w2: 0.4     w2: 0.3502
-w3: 0.3     w3: 0.2649
-w4: 0.2     w4: 0.1031
-w5: 0.9     w5: 0.8502
-w6: 0.5     w6: 0.4649
-w7: 0.3     w7: -0.25
-w8: 0.5     w8: 0.3118
-w9: 0.9     w9: 0.4229
+w1: 0.8     w1: 0.712
+w2: 0.4     w2: 0.3548
+w3: 0.3     w3: 0.2681
+w4: 0.2     w4: 0.112
+w5: 0.9     w5: 0.8548
+w6: 0.5     w6: 0.4681
+w7: 0.3     w7: -0.1162
+w8: 0.5     w8: 0.329
+w9: 0.9     w9: 0.708
 </code></pre><p>Once we arrive at the adjusted weights, we start again with forward propagation. When training a neural network, it is common to repeat both these processes thousands of times (by default, Mind iterates 10,000 times).</p>
 <p>And doing a quick forward propagation, we can see that the final output here is a little closer to the expected output:</p>
-<p><img src="http://i.imgur.com/76yrfwb.png" alt=""></p>
+<p><img src="http://imgur.com/APljTYx.png" alt=""></p>
 <p>Through just one iteration of forward and back propagation, we’ve already improved the network!!</p>
 <p><em>Check out <a href="https://www.youtube.com/watch?v=GlcnxUlrtek">this short video</a> for a great explanation of identifying global minima in a cost function as a way to determine necessary weight changes.</em></p>
 <p>If you enjoyed learning about how neural networks work, check out <a href="/mind-how-to-build-a-neural-network-part-2">Part Two</a> of this post to learn how to build your own neural network.</p>
