--- a/intruder-cracking-wifi-networks-in-node/index.html
+++ b/intruder-cracking-wifi-networks-in-node/index.html
@@ -73,7 +73,7 @@ Intruder()
 </li>
 <li><p>After finding the specific network, we start sniffing network packets on the network channel.</p>
 </li>
-<li><p>Sniffing packets will generate a <code>capture</code> file that contains information about the captured packets. We find that file and then pass the file into <a href="https://github.com/aircrack-ng/aircrack-ng">aircrack</a>, which will attempt to decrypt it. You usually need at least 80,000 IVs, according to aircrack’s documentation.</p>
+<li><p>Sniffing packets will generate a <code>capture</code> file that contains information about the captured packets. We find that file and then pass the file into <a href="https://github.com/aircrack-ng/aircrack-ng">aircrack</a>, which will attempt to decrypt it. You usually need at least 80,000 <a href="https://en.wikipedia.org/wiki/Initialization_vector">IVs</a>, according to aircrack’s documentation.</p>
 </li>
 </ol>
 <p>If you have any questions or comments, don’t hesitate to find me on <a href="https://www.twitter.com/stevenmiller888">twitter</a>.</p>
