--- a/mind-how-to-build-a-neural-network/index.html
+++ b/mind-how-to-build-a-neural-network/index.html
@@ -146,7 +146,7 @@ old w7 = 0.3
 old w8 = 0.5
 old w9 = 0.9
 
-new w7 = -0.1162
+new w7 = 0.1162
 new w8 = 0.329
 new w9 = 0.708
 </code></pre><p>To determine the change in the weights between the <em>input and hidden</em> layers, we perform the similar, but notably different, set of calculations. Note that in the following calculations, we use the initial weights instead of the recently adjusted weights from the first part of the backward propagation.</p>
@@ -199,12 +199,12 @@ w3: 0.3     w3: 0.2681
 w4: 0.2     w4: 0.112
 w5: 0.9     w5: 0.8548
 w6: 0.5     w6: 0.4681
-w7: 0.3     w7: -0.1162
+w7: 0.3     w7: 0.1162
 w8: 0.5     w8: 0.329
 w9: 0.9     w9: 0.708
 </code></pre><p>Once we arrive at the adjusted weights, we start again with forward propagation. When training a neural network, it is common to repeat both these processes thousands of times (by default, Mind iterates 10,000 times).</p>
 <p>And doing a quick forward propagation, we can see that the final output here is a little closer to the expected output:</p>
-<p><img src="http://imgur.com/APljTYx.png" alt=""></p>
+<p><img src="http://i.imgur.com/UNlffE1.png" alt=""></p>
 <p>Through just one iteration of forward and back propagation, we’ve already improved the network!!</p>
 <p><em>Check out <a href="https://www.youtube.com/watch?v=GlcnxUlrtek">this short video</a> for a great explanation of identifying global minima in a cost function as a way to determine necessary weight changes.</em></p>
 <p>If you enjoyed learning about how neural networks work, check out <a href="/mind-how-to-build-a-neural-network-part-2">Part Two</a> of this post to learn how to build your own neural network.</p>
