--- a/mind-how-to-build-a-neural-network/index.html
+++ b/mind-how-to-build-a-neural-network/index.html
@@ -142,7 +142,7 @@ new w9 = 0.806
 Delta hidden sum = -0.1344 * [0.3, 0.5, 0.9] * S&#39;([1, 1.3, 0.8])
 Delta hidden sum = [-0.0403, -0.0672, -0.1209] * [0.1966, 0.1683, 0.2139]
 Delta hidden sum = [-0.0079, -0.0113, -0.0259]
-</code></pre><p>Once we get the <code>delta hidden sum</code>, we calculate the change in weights between the input and hidden layer by multiplying it by the input data, <code>(1, 1)</code>. The input data here is equivalent to the <code>hidden results</code> in the earlier back propagation process to determine the change in the hidden-to-output weights. Here is the derivation of that relationship, similar to the one before:</p>
+</code></pre><p>Once we get the <code>delta hidden sum</code>, we calculate the change in weights between the input and hidden layer by multiplying it by the input data, <code>(1, 1)</code>. The input data here is equivalent to the <code>hidden results</code> in the earlier back propagation process to determine the change in the hidden-to-output weights.</p>
 <p>Let’s do the math:</p>
 <pre><code>input 1 = 1
 input 2 = 1
