--- a/mind-how-to-build-a-neural-network-part-2/index.html
+++ b/mind-how-to-build-a-neural-network-part-2/index.html
@@ -21,7 +21,7 @@
         <div class="Profile">
           <a class="Profile-avatar" href="/"></a>
           <h1 class="Profile-name Heading Heading--medium"><a href="/">Steven Miller</a></h4>
-          <p class="Profile-role">Software Engineer at <a class="Link" href="https://segment.com">Segment</a></p>
+          <p class="Profile-role">Engineering Manager at <a class="Link" href="https://segment.com">Segment</a></p>
         
           <ul class="Profile-links">
             <a class="Profile-link Profile-twitter-link" href="https://twitter.com/stevenmiller888">Twitter</a>
