--- a/mind-how-to-build-a-neural-network/index.html
+++ b/mind-how-to-build-a-neural-network/index.html
@@ -208,6 +208,7 @@ w9: 0.9     w9: 0.708
 <p>Through just one iteration of forward and back propagation, we’ve already improved the network!!</p>
 <p><em>Check out <a href="https://www.youtube.com/watch?v=GlcnxUlrtek">this short video</a> for a great explanation of identifying global minima in a cost function as a way to determine necessary weight changes.</em></p>
 <p>If you enjoyed learning about how neural networks work, check out <a href="/mind-how-to-build-a-neural-network-part-2">Part Two</a> of this post to learn how to build your own neural network.</p>
+<p><strong>Note: I’ve been working on a new project called <a href="https://maji.cloud/products/config">Maji Config</a>. If you’re tired of duplicating config all over your codebase, or having to redeploy all your apps whenever you need to change config, this might work well for you. I’d love to hear what you think of it. Feel free to send me an <a href="mailto:stevenmiller888@me.com?Subject=Hello">email</a>.</strong></p>
 
   </div>
 </article>
